# brazil-football-datalake

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Lista-federações-futebol.md  Makefile  README.md  data_model_gold.md  init.sh  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
airflow/: Dockerfile  docker-compose.yaml
airflow/dags/: brazil_teams.py  dbt_dag.py  sc_teams_dag.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/brazil_football/: .user.yml  dbt_project.yml  profiles.yml
dbt/brazil_football/models/: list_all_teams.sql  sc_clubs_age.sql  sources.yml
dbt/models/: transform_parquet_to_iceberg.sql
dbt/models/staging/: transform_parquet_to_iceberg.sql
devops/: docker-compose.yaml
devops/trino/etc/: core-site.xml
devops/trino/etc/catalog/: minio.properties
docs/: README.md
docs/data-catalogs/: sc-teams.md
ingestion/demo/: writing-file-minio.ipynb
ingestion/src/: ingestion.py
src/: main.db
src/analytics/: main.py  menu.py
src/analytics/locales/: messages.pot
src/analytics/locales/en/LC_MESSAGES/: messages.mo  messages.po
src/analytics/locales/pt/LC_MESSAGES/: messages.mo  messages.po
src/analytics/pages/: analysis_sc_teams.py  jersey_price.py
src/demo/: reading-data-from-fcf.ipynb
src/demo/duckdb/: duck.py
src/ingestion/teams/: sc_teams.py
